# coolrl-lost-cities

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  ideas.md  pyproject.toml  setup.py
configs/archive/: deep-cfr-opponent-network-1024x4-1000iter.yaml  deep-cfr-selfplay-full-depth-slot-playability-512x3-2x-updates-10000iter.yaml  deep-cfr-selfplay-full-depth-slot-playability-512x3-unbounded.yaml  deep-cfr-selfplay-full-depth-slot-playability.yaml
configs/deep_cfr/: deep-cfr-color-shared-512x3.yaml  deep-cfr-color-shared-attention-512x3.yaml  deep-cfr-color-shared-attention-exp-1000iter.yaml  deep-cfr-opponent-average-strategy-512x3-1000iter.yaml  deep-cfr-opponent-network-512x3-1000iter.yaml  deep-cfr-pure-selfplay-full-depth-slot-playability-512x3-2x-updates-10000iter.yaml  deep-cfr-selfplay-anchor-safe-512x3-2x-updates-10000iter.yaml  deep-cfr-selfplay-full-depth-slot-playability-512x3-lcfr-10000iter.yaml  deep-cfr-selfplay-full-depth-slot-playability-unbounded.yaml  deep_cfr_color_shared_512x3.yaml  deep_cfr_color_shared_attention_512x3.yaml  deep_cfr_color_shared_attention_exp_1000iter.yaml  deep_cfr_opponent_average_strategy_512x3_1000iter.yaml  deep_cfr_opponent_network_1024x4_1000iter.yaml  deep_cfr_opponent_network_512x3_1000iter.yaml  deep_cfr_pure_selfplay_full_depth_slot_playability_512x3_2x_updates_10000iter.yaml  deep_cfr_selfplay_anchor_safe_512x3_2x_updates_10000iter.yaml  deep_cfr_selfplay_full_depth_slot_playability.yaml  deep_cfr_selfplay_full_depth_slot_playability_512x3_2x_updates_10000iter.yaml  deep_cfr_selfplay_full_depth_slot_playability_512x3_lcfr_10000iter.yaml  deep_cfr_selfplay_full_depth_slot_playability_512x3_unbounded.yaml  deep_cfr_selfplay_full_depth_slot_playability_unbounded.yaml  default.yaml  default_server.yaml  pure_self_play_zero_pit_poc_full_depth_slot_aware_playability.yaml  smoke.yaml
configs/ismcts/: default.yaml  mini.yaml
docs/: classic-port-notes.md  deep-cfr-batched-evaluation-2026-05-07.md  deep-cfr-evaluation-profile-2026-05-07.md  deep-cfr-evaluation-profile-plan.md  deep-cfr-legacy-experiment-reproduction.md  deep-cfr-legacy-runtime-comparison-2026-05-07.md  deep-cfr-opponent-policy-network-divergence-2026-05-07.md  deep-cfr-profile-2026-05-07.md  deep-cfr-profile-advantage-memory-split-2026-05-07.md  deep-cfr-v0-gap-vs-coolrl.md  fast-engine-next-optimizations.md  performance.md  test-coverage-notes.md
docs/archive/: deep-cfr-performance-experiments-2026-05-07.md  deep-cfr-regret-fallback-audit-2026-05-07.md  deep-cfr-v0-gap-vs-coolrl.md  deep-cfr-v0-plan.md  fast-engine-next-optimizations.md  option-a-bench-result-2026-05-07.md  post-a-optimization-calculus-2026-05-07.md
docs/plans/: amp_trainer.md  batched_traversal_inference_server.md  cython_safe_heuristic_bots.md  deep-cfr-selectivity.md  librarian.md  model_size_experiment.md  option_b_interleaved_traversal.md  torch_compile.md
docs/reports/: cost_cython_nogil_audit_2026-05-07.md  cost_pytorch_cuda_multithread_2026-05-07.md  cost_pytorch_free_threaded_2026-05-07.md
docs/research/: README.md  batched-traversal-inference-decision.md  classic-port-notes.md  deep-cfr-architecture.md  deep-cfr-baseline-2000-analysis.md  deep-cfr-batched-evaluation.md  deep-cfr-evaluation-profile-plan.md  deep-cfr-evaluation-profile.md  deep-cfr-legacy-experiment-reproduction.md  deep-cfr-legacy-runtime-comparison.md  deep-cfr-performance-experiments.md  deep-cfr-profile-advantage-memory-split.md  deep-cfr-profile.md  deep-cfr-regret-fallback-audit.md  deep-cfr-reproducibility-policy.md  deep-cfr-reproducibility.md  deep-cfr-v0-feature-parity.md  deep-cfr-v0-gap-vs-coolrl.md  deep-cfr-v0-plan.md  fast-engine-next-optimizations.md  ismcts-bc-ceiling-2026-05-11.md  julia_port_evaluation.md  lost_cities_selectivity.md  (+8 more)
scripts/: analyze_first_open_advantage.py  analyze_first_open_counterfactual.py  analyze_first_open_followup.py  analyze_first_open_targets.py  autonomous_cycle_eval.sh  bench_amp_trainer.py  bench_inference_backend.py  check-python.sh  eval_current_vs_average.py  export_safe_heuristic_snapshots.py  format-python.sh  librarian-ignore.txt  librarian-prompt.md  librarian.sh  librarian_check_citations.py  librarian_check_links.py  librarian_check_memory_drift.py  librarian_check_oversize.py  librarian_check_stale_plans.py  librarian_promote.py  librarian_survey.py  profile_gpu_forward.py
src/coolrl_lost_cities/games/classic/rust_core/: Cargo.toml  build.rs
src/coolrl_lost_cities/games/classic/rust_core/src/: config.rs  state.rs
(+148 files in other folders)
