[package]
name = "lost-cities-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lost_cities_core"
path = "src/lib.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
